# ideadex

./: .gitignore  LICENSE.txt  README.md  cards.json  pyproject.toml  relations.json
src/ideadex/: config.py
src/ideadex/app/: cli.py  components.py  dash_app.py
src/ideadex/app/assets/: style.css
src/ideadex/data/: __init__.py  cards.json  repository.py
src/ideadex/domain/: __init__.py  card.py  relation.py
tests/: test_basic_card.py
